# evoforge

./: .gitignore  LICENSE  README.md  pyproject.toml  sglink.md
.github/workflows/: ci.yml
configs/: cfd_default.toml  lean_default.toml
docs/: DESIGN_v4.md  post-mortem-naive-llm-search.md
docs/archive/: DESIGN.md  DESIGN_v2.md  DESIGN_v3.md
docs/plans/: 2026-03-03-phase1-completion.md  2026-03-05-error-feedback-api-enumeration-design.md  2026-03-05-error-feedback-api-enumeration.md  2026-03-05-repl-verification-and-rate-limits.md  2026-03-05-sonnet-threading-graduated-scoring.md  2026-03-06-bugfixes-and-tree-search.md  2026-03-06-stagnation-fixes-design.md  2026-03-06-stagnation-fixes-plan.md  2026-03-07-cfd-backend.md
evoforge/: __init__.py
evoforge/backends/: base.py
evoforge/backends/cfd/: backend.py  credit.py  ir.py  operators.py  solver_adapter.py
evoforge/backends/lean/: __init__.py  api_extractor.py  backend.py  credit.py  evaluator.py  ir.py  operators.py  tactic_generator.py  tree_search.py  validation.py
evoforge/backends/lean/templates/: crossover_prompt.j2  mutation_prompt.j2  reflection_prompt.j2  system_prompt.j2  tactic_suggest_prompt.j2
evoforge/core/: archive.py  config.py  engine.py  evaluator.py  generator.py  identity.py  ir.py  memory.py  mutation.py  population.py  scheduler.py  selection.py  types.py
evoforge/llm/: batch.py  client.py  operators.py  retry.py
evoforge/llm/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py
scripts/: run.py  run_with_keychain.sh
tests/: conftest.py
tests/test_cfd/: test_backend.py  test_credit.py  test_integration.py  test_ir.py  test_operators.py  test_smoke.py  test_solver_adapter.py
tests/test_core/: test_backend_abc.py  test_batch.py  test_cache.py  test_checkpoint.py  test_config.py  test_determinism.py  test_engine.py  test_generator.py  test_identity.py  test_ir.py  test_llm_client.py  test_llm_operators.py  test_memory.py  test_mutation.py  test_population.py  test_provider_anthropic.py  test_provider_factory.py  test_provider_gemini.py  test_provider_openai.py  test_providers.py  test_reflection.py  test_scheduler.py  test_selection.py  test_temperature.py  test_types.py
tests/test_lean/: test_api_extractor.py  test_backend.py  test_canonicalization.py  test_credit.py  test_lean_backend.py  test_operators.py  test_stepwise.py  test_tactic_generator.py  test_tree_search.py  test_validation.py  test_verification.py
