[project]
name = "evoforge"
version = "0.1.0"
description = "LLM-guided evolutionary engine for formally-grounded symbolic expressions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.12'",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "greenlet==3.1.0",
    "aiosqlite>=0.20",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "coverage>=7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "lean: marks tests requiring Lean toolchain",
    "integration: marks integration tests",
]
testpaths = ["tests"]
timeout = 30
